# SumOfSquares.py

./: .gitignore  CITATION.cff  LICENSE  Makefile  README.md  Readme.md  SoS.py  basis.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.py  util.py
.github/workflows/: CI.yml
SumOfSquares/: SoS.py  __init__.py  basis.py  util.py
src/SumOfSquares/: SoS.py  __init__.py  basis.py  util.py
src/SumOfSquares_yuanchenyang.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test.py  test_basis.py  test_sos.py
