[metadata]
name = SumOfSquares
version = 1.2.1
author = Chenyang Yuan
author_email = yuanchenyang@gmail.com
description = Python implementation of Sum-of-Squares optimization built on picos
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yuanchenyang/SumOfSquares.py
project_urls =
    Bug Tracker = https://github.com/yuanchenyang/SumOfSquares.py/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    sympy
    picos
tests_require =
    pytest

[options.extras_require]
ConvexHull =
    scipy

[options.packages.find]
where = src
